[Dark mode] Banner compatibility fix

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -136,11 +136,12 @@
     width: 100%;
     position: fixed;
     margin-left: -15px;
-    z-index: 32;
+    z-index: 31;
     top: 4rem;
   }
 
-  background: $gray-100;
+  background: var(--td-pre-bg);
+  color: var(--bs-body-color);
   text-align: center;
 
   & p {
